<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="tbcode.example.kotlinbitcoinwallet.receive.ReceiveFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/qr_code"

        android:layout_margin="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/address_qr_code" />

    <TextView
        android:id="@+id/tv_Receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/btc_address"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingHorizontal="10dp"
        android:textIsSelectable="true"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_code" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/layout_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tv_Receive">



        <TextView
            android:id="@+id/tv_amount"
            style="@style/SendText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/amount"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ev_amount_rf"
            style="@style/SendEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:hint="@string/starting_amount"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:text="" />

    </LinearLayout>

    <Button
        android:id="@+id/generate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:text="@string/create_new_qr_code"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>